--- a/Engine/Source/Engine.vcxproj.filters
+++ b/Engine/Source/Engine.vcxproj.filters
@@ -123,10 +123,16 @@
     </ClCompile>
     <ClCompile Include="ModuleDebugDraw.cpp" />
     <ClCompile Include="ModuleCamera.cpp" />
-    <ClCompile Include="..\Externals\imgui\backends\imgui_impl_opengl2.cpp" />
-    <ClCompile Include="..\Externals\imgui\backends\imgui_impl_opengl3.cpp" />
-    <ClCompile Include="..\Externals\imgui\backends\imgui_impl_sdl2.cpp" />
     <ClCompile Include="ModuleTexture.cpp" />
+    <ClCompile Include="..\Externals\imgui\backends\imgui_impl_opengl2.cpp">
+      <Filter>imgui\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Externals\imgui\backends\imgui_impl_opengl3.cpp">
+      <Filter>imgui\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Externals\imgui\backends\imgui_impl_sdl2.cpp">
+      <Filter>imgui\impl</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -341,11 +347,31 @@
     <ClInclude Include="debugdraw.h" />
     <ClInclude Include="ModuleDebugDraw.h" />
     <ClInclude Include="ModuleCamera.h" />
-    <ClInclude Include="..\Externals\imgui\backends\imgui_impl_opengl2.h" />
-    <ClInclude Include="..\Externals\imgui\backends\imgui_impl_opengl3.h" />
-    <ClInclude Include="..\Externals\imgui\backends\imgui_impl_opengl3_loader.h" />
-    <ClInclude Include="..\Externals\imgui\backends\imgui_impl_sdl2.h" />
     <ClInclude Include="ModuleTexture.h" />
+    <ClInclude Include="..\Externals\imgui\backends\imgui_impl_opengl2.h">
+      <Filter>imgui\impl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Externals\imgui\backends\imgui_impl_opengl3.h">
+      <Filter>imgui\impl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Externals\imgui\backends\imgui_impl_opengl3_loader.h">
+      <Filter>imgui\impl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Externals\imgui\backends\imgui_impl_sdl2.h">
+      <Filter>imgui\impl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Externals\tinygltf-2.8.18\tiny_gltf.h">
+      <Filter>tinygltf</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Externals\tinygltf-2.8.18\json.hpp">
+      <Filter>tinygltf</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Externals\tinygltf-2.8.18\stb_image.h">
+      <Filter>tinygltf</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Externals\tinygltf-2.8.18\stb_image_write.h">
+      <Filter>tinygltf</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="imgui">
@@ -365,6 +391,12 @@
     </Filter>
     <Filter Include="MathGeoLib\Time">
       <UniqueIdentifier>{e5a4e5c7-b768-4d73-a50c-8a8bd2ef30e8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="imgui\impl">
+      <UniqueIdentifier>{37dde6d1-c771-4db7-82ec-41ffc8f6d82c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="tinygltf">
+      <UniqueIdentifier>{0ded059a-cea9-494c-8fce-5dc81d96e01f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
