Load external models drag-and-drop
Define project version

--- a/Engine/Source/RoadToEngine.vcxproj
+++ b/Engine/Source/RoadToEngine.vcxproj
@@ -292,6 +292,7 @@
     <ClInclude Include="ModuleRenderExercise.h" />
     <ClInclude Include="ModuleTexture.h" />
     <ClInclude Include="ModuleWindow.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\Externals\MathGeoLib\include\Geometry\KDTree.inl" />
@@ -301,6 +302,9 @@
     <None Include="..\Externals\MathGeoLib\include\Geometry\TriangleMesh_IntersectRay_SSE.inl" />
     <None Include="..\Externals\MathGeoLib\include\Math\Matrix.inl" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="RoadToEngine.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
